Add first frontend

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,12 @@
+# Api
+API_PORT=8080
+
+
 # Mysql
-MYSQL_DATABASE=rust_practice
-MYSQL_USER=local_user
-MYSQL_PASSWORD=local_pass
-MYSQL_ROOT_PASSWORD=local_pass
+POSTGRES_DB=rust_practice
+POSTGRES_USER=local_user
+POSTGRES_PORT=5432
+POSTGRES_PASSWORD=local_pass
+
+# mysql://user:password@host/database_name
+DATABASE_URL=mysql://$MYSQL_USER:$MYSQL_PASSWORD@mysql/$MYSQL_DATABASE
