--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,3 +12,7 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
 tower = { version = "0.4", features = ["full"] }
 tower-http = { version = "0.3.4", features = ["full"] }
+diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
+dotenvy = "0.15"
+chrono = "0.4"
+anyhow = "1"
