--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "rust-analyzer.linkedProjects": [
+        "./api/Cargo.toml",
+        "./api/Cargo.toml",
         "./api/Cargo.toml"
     ]
 }
